fixed word-wrap on feed

--- a/client/styles/pages/_feed.scss
+++ b/client/styles/pages/_feed.scss
@@ -15,7 +15,7 @@
   margin-bottom: 20px;
   border: 2px solid rgb(0, 0, 0);
   border-radius: 10px;
-  box-shadow: 3px 3px  rgb(0, 0, 0);
+  box-shadow: 3px 3px rgb(0, 0, 0);
 
   h2 {
     width: 80%;
@@ -51,8 +51,19 @@ section {
   flex-direction: row-reverse;
   margin: auto;
   border-top: 2px solid black;
+  min-height: 100px;
+
+  p {
+    max-width: 75%;
+    overflow-wrap: break-word;
+    padding: 20px;
+    margin-left: 50px;
+  }
 
   .user-img {
+    position: absolute;
+    top: 10px;
+    left: 10px;
     object-fit: cover;
     width: 70px;
     height: 70px;
